[package]
name = "xtask"
edition.workspace = true
publish = false
license.workspace = true

[dependencies]
clap.workspace = true
clap-verbosity-flag = { features = ["tracing"] , workspace = true }
color-eyre.workspace = true
duct = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
